fix: hidden scrollbar when overlay is open

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,6 +73,10 @@ main img {
     display: none;
 }
 
+.hideScrollbar {
+    overflow-y: hidden;
+}
+
 .showOnCentreOfThePage {
     display: flex;
     justify-content: center;
